fix navbar behaviour to sticky and z-index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,13 +3,9 @@
   justify-content: flex-end;
   background: transparent;
   flex-grow: 0;
-
+  position: sticky;
+  top: 0;
+  z-index: 1;
   li {  list-style-type: none;
   }
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
 }
